--- a/assets/scss/elements/_banner.scss
+++ b/assets/scss/elements/_banner.scss
@@ -417,12 +417,12 @@
       .slider {
         .slide {
           .title-wrapper {
-            .crest-white {
-              width: 35px;
+            .stag-antlers {
+              width: 47px;
               margin: 0 20px 0 30px;
             }
             h2 {
-              font-size: 55px;
+              font-size: 45px;
               letter-spacing: -2px;
             }
           }
